Some fields became standard in N26...